[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liq-signals"
version = "0.1.0"
description = "Signal data structures and provider protocol for the LIQ stack"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Latent Infinity", email = "dev@latentinfinity.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "liq-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.14",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/Latent-Infinity/liq-signals"
Repository = "https://github.com/Latent-Infinity/liq-signals"

[tool.hatch.build.targets.wheel]
packages = ["src/liq"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=liq.signals --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/liq/signals"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
